# abs2sg

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
docs/: architecture.md  matching.md  operations.md
scripts/: capture_storygraph_state.py  firefox_devtools_storage_state_snippet.js  remove_two_leading_spaces.py
src/abs2sg/: __init__.py  abs_client.py  config.py  logging_utils.py  main.py  matcher.py  models.py  state_store.py  storygraph_client.py  sync_engine.py
tests/: test_abs_client.py  test_matcher.py  test_state_store.py
