[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "abs2sg"
version = "0.1.0"
description = "Sync Audiobookshelf library status to StoryGraph shelves."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright==1.52.0",
  "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "ruff==0.11.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
